# alexandria-project

./: .buildinfo  .gitignore  LICENSE  QUICK_REFERENCE.html  README.md  USAGE_EXAMPLES.html  api.html  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: QUICK_REFERENCE.doctree  USAGE_EXAMPLES.doctree  api.doctree  contents.doctree  index.doctree
.github/workflows/: docs.yml  pages.yml  release.yml
_modules/: index.html
_modules/alexandria/analyzers/: ctp401.html  ctp404.html  ctp515.html  detailed_uniformity.html  high_contrast.html  uniformity.html
_modules/alexandria/plotters/: ctp401_plotter.html  ctp404_plotter.html  ctp515_plotter.html  detailed_uniformity_plotter.html  high_contrast_plotter.html  uniformity_plotter.html
_modules/alexandria/utils/: geometry.html  image_processing.html
_modules/alexandria/wrappers/: ctp401_wrapper.html  ctp404_wrapper.html  ctp515_wrapper.html  high_contrast_wrapper.html  uniformity_wrapper.html
_sources/: QUICK_REFERENCE.md.txt  USAGE_EXAMPLES.md.txt  index.rst.txt
docs/: CONTENTS.md
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  contents.md  index.rst
src/alexandria/: __init__.py
src/alexandria/analyzers/: __init__.py  ctp401.py  ctp404.py  ctp515.py  detailed_uniformity.py  high_contrast.py  uniformity.py
src/alexandria/docs/: CONTENTS.md
src/alexandria/plotters/: __init__.py  ctp401_plotter.py  ctp404_plotter.py  (+4 more)
(+33 files in other folders)
