[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alexandria"
version = "1.0.0"
description = "Unified CatPhan phantom analysis library - combining best features from multiple implementations"
authors = [
    { name = "Medical Physics Team", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"

# Core dependencies
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
    "pydicom>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinxcontrib-napoleon>=0.7",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/your/alexandria"
Documentation = "https://github.com/your/alexandria/wiki"
Repository = "https://github.com/your/alexandria"


[tool.setuptools.packages.find]
where = ["src"]
include = ["alexandria*"]


